CM-62 Fix modal overflow

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -911,6 +911,7 @@ table td {
   right: 0;
   bottom: 0;
   background-color: rgba(0, 0, 0, 0.65);
+  overflow: auto;
 }
 
 .custom-modal-inner {
